include_directories(
  ${CMAKE_SOURCE_DIR}
  # ${CMAKE_SOURCE_DIR}/external/freetype-2.4.4/Include
  )

# directx tutorial
# add_subdirectory(empty)
# add_subdirectory(dxCreate)
# add_subdirectory(dxTriangle)
# add_subdirectory(dxFx)
# add_subdirectory(dxTransform)
# add_subdirectory(dxTexture)
# add_subdirectory(dxChunk)
#add_subdirectory(dxQuadTree)
#add_subdirectory(winmain)
#add_subdirectory(ui)
#add_subdirectory(lua)
#add_subdirectory(terrain_00_hello)
#add_subdirectory(terrain_01_wtl)
#add_subdirectory(terrain_02_Height)
#add_subdirectory(terrain_03_decal)
#add_subdirectory(terrain_04_texture)
#add_subdirectory(ModelEditor)
add_subdirectory(SceneEditor)